--- a/index.html
+++ b/index.html
@@ -721,32 +721,11 @@
 
             <div id="order-information">
                 <div class="title">ORDER</div>
-                <div class="information">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec egestas massa
-                    vel maximus viverra. Proin fringilla tortor
-                    eu risus tempus tincidunt. Etiam eu mollis dolor. Sed tortor nulla, volutpat a nunc eu, tincidunt
-                    egestas turpis.
-                    Aliquam a ligula sit amet sem pulvinar malesuada. Donec gravida, lectus quis faucibus blandit, ex
-                    nibh maximus est, at
-                    ornare ante felis vitae erat. Sed malesuada maximus augue non fringilla. Orci varius natoque
-                    penatibus et magnis dis
-                    parturient montes, nascetur ridiculus mus. Nullam pretium efficitur dolor, non tincidunt nulla
-                    ornare vitae.
-
-                    Fusce malesuada imperdiet suscipit. Vestibulum egestas semper risus, non porta justo pharetra eget.
-                    Sed venenatis semper
-                    tellus non feugiat. Morbi massa libero, placerat eu justo nec, vestibulum convallis nulla. Fusce non
-                    sem vel tellus
-                    lobortis laoreet. Maecenas et varius lorem. Sed eu pretium lacus, eu rutrum mauris. Aliquam ac
-                    placerat eros, et dapibus
-                    enim.
-
-                    Aenean velit nunc, dictum id mattis eu, gravida et justo. Praesent sit amet mollis mi, vel
-                    condimentum est. Nullam
-                    sollicitudin in turpis quis malesuada. Suspendisse ac metus varius, vehicula dui in, sollicitudin
-                    ex. Etiam interdum leo
-                    eget fringilla efficitur. Fusce scelerisque mi id erat ullamcorper dignissim. In hac habitasse
-                    platea dictumst. Donec
-                    eget blandit nisl. Vestibulum fermentum tellus vitae neque faucibus, at pharetra justo gravida.
+                <div class="information">
+                                        We have streamlined our ordering process in order to get food to you as soon as possible. Our process is simple. First, you browse our 
+                                        website and decide on the groceries you wish to purchase. You then send a message to _____ saying what you wish to purchase, and your adress.
+                                        We will then follow up with you for payment. We support paynow, paylah and ofcourse cash on delivery. We deliver free of cost nationwide and 
+                                        will always dispatch orders within two buisness days. 
                 </div>
             </div>
 
@@ -760,42 +739,11 @@
 
             <div id="about-information">
                 <div class="title">ABOUT</div>
-                <div class="information">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec egestas massa
-                    vel maximus
-                    viverra. Proin fringilla tortor
-                    eu risus tempus tincidunt. Etiam eu mollis dolor. Sed tortor nulla, volutpat a nunc eu, tincidunt
-                    egestas
-                    turpis.
-                    Aliquam a ligula sit amet sem pulvinar malesuada. Donec gravida, lectus quis faucibus blandit, ex
-                    nibh maximus
-                    est, at
-                    ornare ante felis vitae erat. Sed malesuada maximus augue non fringilla. Orci varius natoque
-                    penatibus et magnis
-                    dis
-                    parturient montes, nascetur ridiculus mus. Nullam pretium efficitur dolor, non tincidunt nulla
-                    ornare vitae.
-
-                    Fusce malesuada imperdiet suscipit. Vestibulum egestas semper risus, non porta justo pharetra eget.
-                    Sed
-                    venenatis semper
-                    tellus non feugiat. Morbi massa libero, placerat eu justo nec, vestibulum convallis nulla. Fusce non
-                    sem vel
-                    tellus
-                    lobortis laoreet. Maecenas et varius lorem. Sed eu pretium lacus, eu rutrum mauris. Aliquam ac
-                    placerat eros, et
-                    dapibus
-                    enim.
-
-                    Aenean velit nunc, dictum id mattis eu, gravida et justo. Praesent sit amet mollis mi, vel
-                    condimentum est.
-                    Nullam
-                    sollicitudin in turpis quis malesuada. Suspendisse ac metus varius, vehicula dui in, sollicitudin
-                    ex. Etiam
-                    interdum leo
-                    eget fringilla efficitur. Fusce scelerisque mi id erat ullamcorper dignissim. In hac habitasse
-                    platea dictumst.
-                    Donec
-                    eget blandit nisl. Vestibulum fermentum tellus vitae neque faucibus, at pharetra justo gravida.
+                <div class="information">
+                                        We opened our operation in Singapore with the objective of bringing fresh, authentic groceries to Singaporean shores.
+                                        We source cooking stapes in good Indian cuisine in order to help you recreate your favourite dishes. All of our produce
+                                        is air-flown to ensure fresness and quality. Our cooked goods are all made in house to guarantee flavour. We stand behind
+                                        all of our products and will gladly refund them if they are not to your standard. 
                 </div>
             </div>
 
